[package]
name = "cortex-m-rtos"
version = "0.1.0"
authors = ["Gheorghe Florian GLAVAN <gglavan@bitdefender.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.13"
cortex-m = {version = "0.7.2", features=['inline-asm']}
cortex-m-semihosting = "0.3.7"
panic-semihosting = "0.5.6"
stm32f3-discovery = "0.6.0"
