[package]
name = "chaos"
version = "0.1.0"
authors = ["Gheorghe Florian GLAVAN <gglavan@bitdefender.com>"]
edition = "2018"

[[test]]
name = "tests"
path = "tests/build_tests.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
chaos-macros = { path = "macros"}
cortex-m = {version = "0.7.2", features=['inline-asm']}
